actualizada a imagem da ágina principal; adicionadas as imagens das páginas em falta; completada a explicação;

--- a/templates/adicionar.html
+++ b/templates/adicionar.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html> 
 <html> 
     <head> 
-        <title>Adicionar Artigo </title>
+        <title>Adicionar Produto </title>
         <meta name="viewport" content="width=device-width, initial-scale=1 /">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" /> 
     </head> 
     <body>
         <div class="w3-container w3-twothird">
-            <h1 class="w3-center">Adicionar produto</h1>
+            <h1 class="w3-center">Adicionar Produto</h1>
 
             <form class="w3-container" method="POST"> 
                 <label class="w3-text-blue">Produto:</label> 
