--- a/templates/index.html
+++ b/templates/index.html
@@ -54,6 +54,26 @@
           <button class="w3-button w3-blue w3-border w3-round-large">Adicionar</button>
         </a>
       </div>
+
+      <div class="w3-container">
+        <br/>
+        <br/>
+        <br/>
+      </div>
+
+      <footer class="w3-container w3-center" style="font-size: 75%;">
+        <div class="w3-container">
+          Desenvolvido com:
+          <i class="fab fa-python"> </i> <a href="https://www.python.org/"> Python</a>
+          <a href="https://flask.palletsprojects.com/en/stable/"> Flask</a>
+          <a href="https://www.sqlite.org/"> Sqlite</a>
+          <a href="https://www.w3schools.com/w3css/default.asp"> W3-CSS</a>
+          &nbsp;- &nbsp;
+          <i class="fab fa-github-square"> </i> <a href="https://github.com/JorgePe/lista_de_compras"> Código + Documentação</a>
+        </div>          
+      </div>
+  
     </div>
+
   </body> 
 </html> 
